--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Garfiledren.GitHub.com by GarfiledRen</title>
+    <meta name="description" content="Garfiledren.GitHub.com : 数据挖掘">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Garfiledren.GitHub.com</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Garfiledren.GitHub.com</h1>
-        <p>数据挖掘</p>
-        <p class="view"><a href="https://github.com/GarfiledRen">View the Project on GitHub <small>GarfiledRen</small></a></p>
-        <ul>
-          <li class="single"><a href="https://github.com/GarfiledRen/garfiledren.github.com">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/GarfiledRen">View on GitHub</a>
+
+          <h1 id="project_title">Garfiledren.GitHub.com</h1>
+          <h2 id="project_tagline">数据挖掘</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="garfiledrengithubcom" class="anchor" href="#garfiledrengithubcom" aria-hidden="true"><span class="octicon octicon-link"></span></a>garfiledren.github.com</h1>
       </section>
     </div>
-    <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
